# To-do_FastApi

./: README.md  alembic.ini  base.py  db.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 16109813f504_fix_tables.py  403f914f363c_fix_tables.py  5962bc9b0934_fix_tables.py  8b1bf84f2688_init_db.py  b09382584ab2_fix_tables.py
task/: api.py  models.py  schemas.py
user/: api.py  models.py  schemas.py
