[tool.poetry]
name = "to-do_fastapi"
version = "0.1.0"
description = ""
authors = ["Sinicin Roman <sinicinr2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.4.0"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
